--- a/style.css
+++ b/style.css
@@ -3,14 +3,29 @@
     margin: 0;
     box-sizing: border-box;
 }
-
-main {
-    width: 100%;
-    height: 100vh;
+body{
     background-color: black;
+}
+p{
+    background-color: #000;
+    color: #fff;
+    padding-left: 30px;
+    font-size: 30px;
+    font-weight: 500;
+    margin: 90px 0 0 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
+}
+main {
+    width: 100%;
+    height: 100vh;
+    /* background-color: black; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transform: translateY(-100px);
 }
 
 .circle {
